footer dark mode fixed

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -477,15 +477,17 @@ footer{
     align-items: center;
     flex-direction: column;
     row-gap: 30px;
-    background: #F8F8F8;
+    background: var(--color-white);
     padding-block: 40px 60px;
 }
 .top-footer p{
     font-size: 25px;
     font-weight: 600;
+    color: var(--text-color-second);
 }
 .middle-footer .footer-menu{
     display: flex;
+    color: var(--text-color-third);
 }
 .footer_menu_list{
     list-style: none;
@@ -503,6 +505,7 @@ footer{
 .bottom-footer{
     font-size: 14px;
     margin-top: 10px;
+    color: var(--text-color-third);
 }
 
 
